--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,23 @@ body {
   z-index: 99;
 }
 
+/* Add these styles for equal height cards in favorites section */
+#favorites-container .card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+#favorites-container .card-body {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+#favorites-container .card-text {
+  flex-grow: 1;
+}
+
 .py-7 {
   padding-top: 5rem !important;
   /* 80px */
